--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd server && node server.js & cd client && npm start"
+    "start": "cd server && node server.js & cd client && npm start",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
