Repackaged to serve production build directly from server.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd server && node server.js & cd client && npm start",
+    "start": "cd server && node server.js",
     "build": "cd client && npm run build"
   },
   "repository": {
