--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^8.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security"
   },
