--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL=https://www.flavorpairingcalculator.com/
+REACT_APP_API_BASE_URL=https://flavor-pairing-calculator.onrender.com
